--- a/index.html
+++ b/index.html
@@ -38,22 +38,24 @@
   </head>
   <body class="h-body">
 
+<!-- home page or login page -->
+
     <div class="container-fluid topbar py-4">
       <div class="container">
         <div class="row">
-          <div class="col-2 logo">
+          <div class="col-xxl-2 col-xl-2 col-lg-2 col-md-2 col-sm-2 logo">
             <h1>Logo</h1>
           </div>
 
-          <div class="col-10 d-flex justify-content-end align-items-center tb-form">
+          <div class="col-xxl-10 col-xl-10 col-lg-10 col-md-10 col-sm-10 tb-form">
             <form class="home-f">
               <label class="inp-lbl">Email</label>
-              <input type="email" class="login-inps" placeholder="enter your email">
+              <input type="email" class="login-inps" placeholder="your email">
 
               <label class="inp-lbl">Password</label>
-              <input type="password" class="login-inps" placeholder="enter your password">
+              <input type="password" class="login-inps" placeholder="your password">
 
-              <input type="submit" class="sub-btn">
+              <button class="sub-btn">Submit</button>
             </form>
           </div>
         </div>
