I added all the forms in this project.

--- a/index.html
+++ b/index.html
@@ -52,7 +52,10 @@
     </div>
 
     <div class="form-container mx-auto my-5">
-      <form id="loginForm" class="d-flex justify-content-center align-items-center flex-column">
+      <form
+        id="loginForm"
+        class="d-flex justify-content-center align-items-center flex-column"
+      >
         <div class="form-group mb-5">
           <label class="inp-lbl" for="email">Email:</label>
           <input
