--- a/add vendor.html
+++ b/add vendor.html
@@ -39,79 +39,64 @@
 
   <body>
     <div class="container">
-      <h1 class="my-5 d-form-head">Add Vendor</h1>
-      <section>
-        <form class="d-form">
-            <div class="row">
-                <div class="col-1 p-0">
-                    <p class="form-heads">s.no</p>
-                    <input type="text" id="add-vendor-sno" class="form-inps" placeholder="s.no">
-                </div>
-                <div class="col-1 p-0">
-                    <p class="form-heads">s.no</p>
-                    <input type="date" id="add-vendor-date" class="form-inps" placeholder="date">
-                </div>
-                <div class="col-1 p-0">
-                    <p class="form-heads">s.no</p>
-                    <input type="text" id="add-vendor-vendor-name" class="form-inps" placeholder="vendor name">
-                </div>
-                <div class="col-1 p-0">
-                    <p class="form-heads">s.no</p>
-                    <input type="text" id="add-vendor-address" class="form-inps" placeholder="address">
-                </div>
-                <div class="col-1 p-0">
-                    <p class="form-heads">s.no</p>
-                    <input type="tel" id="add-vendor-cell-num" class="form-inps" placeholder="cell num">
-                </div>
-                <div class="col-1 p-0">
-                    <p class="form-heads">s.no</p>
-                </div>
-                <div class="col-1 p-0">
-                    <p class="form-heads">s.no</p>
-                </div>
-                <div class="col-1 p-0">
-                    <p class="form-heads">s.no</p>
-                </div>
-                <div class="col-1 p-0">
-                    <p class="form-heads">s.no</p>
-                </div>
-                <div class="col-1 p-0">
-                    <p class="form-heads">s.no</p>
-                </div>
-                <div class="col-1 p-0">
-                    <p class="form-heads">s.no</p>
-                </div>
-                <div class="col-1 p-0">
-                    <p class="form-heads">s.no</p>
-                </div>
-                <div class="col-1 p-0">
-                    <p class="form-heads">s.no</p>
-                </div>
-                <div class="col-1 p-0">
-                    <p class="form-heads">s.no</p>
-                </div>
-                <div class="col-1 p-0">
-                    <p class="form-heads">s.no</p>
-                </div>
-                <div class="col-1 p-0">
-                    <p class="form-heads">s.no</p>
-                </div>
-            </div>
-            
-            
-            <input type="text" id="add-vendor-product" class="form-inps" placeholder="product">
-            <input type="number" id="add-vendor-bags" class="form-inps" placeholder="bags">
-            <input type="number" id="add-vendor-bags-weight" class="form-inps" placeholder="bags weight">
-            <input type="number" id="add-vendor-price" class="form-inps" placeholder="price">
-            <input type="number" id="add-vendor-total-value" class="form-inps" placeholder="total value">
-            <input type="number" id="add-vendor-advance-payment" class="form-inps" placeholder="advance payment">
-            <input type="number" id="add-vendor-amount-payable" class="form-inps" placeholder="amount payable">
-            <input type="number" id="add-vendor-outstanding-payable" class="form-inps" placeholder="outstanding payable">
-            <input type="number" id="add-vendor-balance" class="form-inps" placeholder="balance">
-            <button type="button" id="add-vendor-edit" class="form-inps">edit</button>
-            <button type="button" id="add-vendor-delete" class="form-inps">delete</button>
-        </form>
-    </section>
+      <h1 class="my-5 d-form-head">Vendor's details</h1>
+      <table class="table" width="100%">
+        <thead>
+          <tr>
+            <th scope="col">s.no</th>
+            <th scope="col">date</th>
+            <th scope="col">vendor name</th>
+            <th scope="col">address</th>
+            <th scope="col">cell num</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td class="p-0" width="50rem">
+              <input
+                type="text"
+                value="1"
+                id="add-vendor-sno"
+                class="py-1 form-inps"
+                readonly
+              />
+            </td>
+
+            <td class="p-0" width="50rem">
+              <input type="date" id="add-vendor-date" class="form-inps py-1" />
+            </td>
+
+            <td class="p-0" width="300rem">
+              <select name="vendor-name-ctnr" id="add-vendor-vendor-name" class="form-inps py-1">
+                <option value="customer 1" class="vendor-name">customer 1</option>
+                <option value="customer 2" class="vendor-name">customer 2</option>
+                <option value="customer 3" class="vendor-name">customer 3</option>
+                <option value="customer 4" class="vendor-name">customer 4</option>
+                <option value="customer 5" class="vendor-name">customer 5</option>
+              </select>
+            </td>
+
+            <td class="p-0" width="300rem">
+              <input
+                type="text"
+                id="add-vendor-address"
+                class="py-1 form-inps"
+                autocomplete="off"
+              />
+            </td>
+
+            <td class="p-0" width="200rem">
+              <input
+                type="number"
+                id="add-vendor-vendor-cell-num"
+                class="py-1 form-inps"
+                autocomplete="off"
+              />
+            </td>
+          </tr>
+        </tbody>
+      </table>
+
     </div>
   </body>
 
